--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Convite de Aniversário</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/index.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
   <div id="layout">
