--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <aside>
       <div class="aside-container">
         <header>
-          <img src="/assets/Logo.svg" alt="imagem de confete de festa">
+          <img src="assets/Logo.svg" alt="imagem de confete de festa">
           <div>
             <h1>Festivite</h1>
             <p>Crie um convite digital para o seu evento</p>
@@ -37,7 +37,7 @@
           <fieldset class="about">
             <legend>
               <div class="legend">
-                <img src="/assets/icons/calendar.svg" alt="ícone de calendário">
+                <img src="assets/icons/calendar.svg" alt="ícone de calendário">
                 <legend>Sobre o evento</legend>
               </div>
             </legend>
@@ -108,7 +108,7 @@
 
           <fieldset class="personalize">
             <div class="legend">
-              <img src="/assets/icons/paintbrush-vertical.svg" alt="">
+              <img src="assets/icons/paintbrush-vertical.svg" alt="">
               <legend>Personalização</legend>
             </div>
 
@@ -167,7 +167,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image.png" alt="imagem de bolo de aniversário com vela">
+                    <img src="assets/Image.png" alt="imagem de bolo de aniversário com vela">
                   </div>
                   <div>
                     <label>Aniversário</label>
@@ -177,7 +177,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (1).png" alt="imagem de festa infantil colorida">
+                    <img src="assets/Image (1).png" alt="imagem de festa infantil colorida">
                   </div>
                   <div>
                     <label>Infantil</label>
@@ -187,7 +187,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets//Image (2).png" alt="imagem de um capelo preto e faixa verde de formatura">
+                    <img src="assets//Image (2).png" alt="imagem de um capelo preto e faixa verde de formatura">
                   </div>
                   <div>
                     <label>Formatura</label>
@@ -197,7 +197,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (3).png" alt="imagem de um par alianças de casamento">
+                    <img src="assets/Image (3).png" alt="imagem de um par alianças de casamento">
                   </div>
                   <div>
                     <label>Casamento</label>
@@ -207,7 +207,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (4).png" alt="imagem contendo flores e fralda">
+                    <img src="assets/Image (4).png" alt="imagem contendo flores e fralda">
                   </div>
                   <div>
                     <label>Chá de bebê</label>
@@ -217,7 +217,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (5).png" alt="imagem de chá de panela">
+                    <img src="assets/Image (5).png" alt="imagem de chá de panela">
                   </div>
                   <div>
                     <label>Chá de panela</label>
@@ -227,7 +227,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (6).png" alt="imagem de confetes coloridos de carnaval">
+                    <img src="assets/Image (6).png" alt="imagem de confetes coloridos de carnaval">
                   </div>
                   <div>
                     <label>Carnaval</label>
@@ -237,7 +237,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (7).png" alt="imagem de um ovo verde e com rosto sorridente e orelhas de coelho de páscoa">
+                    <img src="assets/Image (7).png" alt="imagem de um ovo verde e com rosto sorridente e orelhas de coelho de páscoa">
                   </div>
                   <div>
                     <label>Páscoa</label>
@@ -247,7 +247,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (8).png" alt="imagem de bandeirolas coloridas de são joão">
+                    <img src="assets/Image (8).png" alt="imagem de bandeirolas coloridas de são joão">
                   </div>
                   <div>
                     <label>São joão</label>
@@ -257,7 +257,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (9).png" alt="imagem de aboboras com rosto e iluminado de halloween">
+                    <img src="assets/Image (9).png" alt="imagem de aboboras com rosto e iluminado de halloween">
                   </div>
                   <div>
                     <label>Halloween</label>
@@ -267,7 +267,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (10).png" alt="imagem de dois presentes embalados de natal">
+                    <img src="assets/Image (10).png" alt="imagem de dois presentes embalados de natal">
                   </div>
                   <div>
                     <label>Natal</label>
@@ -277,7 +277,7 @@
                 <div class="theme">
                   <input type="radio" id="theme" name="theme">
                   <div>
-                    <img src="/assets/Image (11).png" alt="imagem de pessoas brindando">
+                    <img src="assets/Image (11).png" alt="imagem de pessoas brindando">
                   </div>
                   <div>
                     <label>Outros</label>
@@ -327,7 +327,7 @@
           <fieldset class="contact">
             <legend>
               <div class="legend">
-                <img src="/assets/icons/contact.svg" alt="ícone de contato">
+                <img src="assets/icons/contact.svg" alt="ícone de contato">
                 <legend>Dados para contato</legend>
               </div>
             </legend>
